--- a/frontend/src/components/PhotoUploader.css
+++ b/frontend/src/components/PhotoUploader.css
@@ -2,14 +2,72 @@ form {
     width: 700px;
     margin: 150px auto;
 }
-
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+.custom-file {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    margin-bottom: 0;
+}
+.custom-file-input {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    margin: 0;
+    opacity: 0;
+}
+.custom-file-label {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+}
+.custom-file-input:lang(en)~.custom-file-label::after {
+    content: "Browse";
+    cursor: pointer;
+}
+.custom-file-label::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
+    display: block;
+    height: calc(1.5em + .75rem);
+    padding: .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    content: "Browse";
+    background-color: #e9ecef;
+    border-left: inherit;
+    border-radius: 0 .25rem .25rem 0;
+}
 form div {
     margin: 30px auto;
 }
-
+button[type=submit] {
+    padding: 10px 20px;
+    border-radius: 5px;
+}
 .hide {
     display:none;
 }
 .show {
     display: block;
+}
+#preview {
+    margin: 0 auto;
 }
