--- a/frontend/src/components/PhotoUploader.css
+++ b/frontend/src/components/PhotoUploader.css
@@ -6,61 +6,28 @@ form {
 form div {
     margin: 30px auto;
 }
-
-.custom-file {
+form .file-input-container {
     position: relative;
-    display: inline-block;
-    width: 100%;
-    height: calc(1.5em + .75rem + 2px);
-    margin-bottom: 0;
 }
-.custom-file-input {
-    position: relative;
-    z-index: 2;
-    width: 100%;
-    height: calc(1.5em + .75rem + 2px);
-    margin: 0;
+form .file-input {
     opacity: 0;
 }
-.custom-file-label {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1;
-    height: calc(1.5em + .75rem + 2px);
-    padding: .375rem .75rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-}
-.custom-file-input:lang(en)~.custom-file-label::after {
-    content: "Browse";
-    cursor: pointer;
-}
-.custom-file-label::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 3;
-    display: block;
-    height: calc(1.5em + .75rem);
-    padding: .375rem .75rem;
-    line-height: 1.5;
-    color: #495057;
-    content: "Browse";
-    background-color: #e9ecef;
-    border-left: inherit;
-    border-radius: 0 .25rem .25rem 0;
-}
-
-button[type=submit] {
-    padding: 10px 20px;
+form .file-label {
+    border: 1px solid #CCC;
     border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    cursor: pointer;
+    padding: 10px 15px;
+    color: #999;
+
+}
+form button {
+    padding: 10px 15px;
+    border-radius: 5px;
+    color: #999;
 }
 .hide {
     display:none;
